name:                Valet
version:             0.1.0.0
synopsis:            Applicative Value similar to Formlet
-- description:
homepage:            https://github.com/momomimachli/Valet
license:             GPL-3
license-file:        LICENSE
author:              Leonard Monnier
maintainer:          leonard.monnier@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Valet,
                       Data.Valet.Utils.Reader,
                       Data.Valet.Utils.Renderers,
                       Data.Valet.Utils.Values
  -- other-modules:
  other-extensions:    FlexibleInstances, GADTs, OverloadedStrings
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , lens
                     , mtl >= 2.2.1
                     , text >=1.2 && <1.3
                     , transformers >= 0.4.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010